--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,36 @@
 @charset "utf-8";
 /* CSS Document */
-h1 {
-  color: red;
+* {
+	padding: 0;
+	margin: 0 auto;
+	}
+body {
+	width: 1280px;
+	}
+header {
+	display: inline-block;
+	width: 100%;
+
+}
+header>img {
+	float: left;
+}
+menu {
+	float: left;
+	margin-left: 15px;
+}
+menu.HeaderMenu ul{
+	display: inline-block;
+}
+menu.HeaderMenu ul li{
+	list-style: none;
+	float: left;
+	}
+menu.HeaderMenu ul li a{
+	color: black;
+	text-decoration: none;
+	margin-right: 10px; 
+}
+header>select {
+	float: right;
 }
