--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,6 +18,8 @@ header>img {
 menu {
 	float: left;
 	margin-left: 15px;
+	padding-top: 15px;
+
 }
 menu.HeaderMenu ul{
 	display: inline-block;
@@ -25,12 +27,17 @@ menu.HeaderMenu ul{
 menu.HeaderMenu ul li{
 	list-style: none;
 	float: left;
+	
 	}
 menu.HeaderMenu ul li a{
 	color: black;
 	text-decoration: none;
-	margin-right: 10px; 
+	margin-right: 10px;
 }
 header>select {
+	margin-top: 15px;
 	float: right;
+}
+div.routes {
+	display: inline-block;
 }
